2014-10-06  Herbert Xu <herbert@gondor.apana.org.au>

	* Exit without arguments in a trap should use status outside traps.
	* Do not allow break to break across function calls.
	* Move common skipcount logic into skiploop.
	* Allow return in loop conditional to set exit status.
	* Return without arguments in a trap should use status outside traps.

2014-10-03  Herbert Xu <herbert@gondor.apana.org.au>

	* Do not clobber exitstatus in evalcommand.

2014-10-02  Herbert Xu <herbert@gondor.apana.org.au>

	* Fix use-after-free in dotrap/evalstring.
	* Make sure evalskip is zero before running traps.
	* Set exitstatus in onint.

2014-09-29  Herbert Xu <herbert@gondor.apana.org.au>

	* Kill pgetc_macro.
	* Handle backslash newlines properly after dollar sign.
	* Add nlprompt/nlnoprompt helpers.

2014-09-28  Herbert Xu <herbert@gondor.apana.org.au>

	* Correctly handle test ! ! = !.

2014-09-26  Herbert Xu <herbert@gondor.apana.org.au>

	* Small optimisation of command -pv change.
	* Set command -p path to /usr/sbin:/usr/bin:/sbin:/bin.
	* Change "characters" for printf precision to "bytes".
	* Release 0.5.8.

2014-09-26  Jonathan Nieder <jrnieder@gmail.com>

	* Clarify "trap '' signals" syntax in manual page.

2014-09-26  Adam Buchbinder <adam.buchbinder@gmail.com>

	* Clarify that 0 and EXIT are both acceptable for exit traps.

2014-09-26  Harald van Dijk <harald@gigawatt.nl>

	* command: allow combining -p with -v.
	* getjob: Fix off-by-one error for multiple of four job numbers

2013-08-23  Herbert Xu <herbert@gondor.apana.org.au>

	* Propagate EXP_QPAT in subevalvar.
	* Initialise OPTIND after importing environment.
	* Fixed argument parsing crash in test.

2013-03-12  Peter Rosin <peda@lysator.liu.se>

	* Add newline when tracing in poplocalvars.

2013-01-10  Jérémie Courrèges-Anglas <jca+dash@wxcvbn.org>

	* Markup fixes in manual for mandoc 1.12.1.

2012-12-03  Harald van Dijk <harald@gigawatt.nl>

	* Use PRIdMAX instead of %j in printf.
